tests/paczka1/small_fuzzy/67316445.err
Error in line 1: bJI S302 18,5
Error in line 3: bJI S137 79,8
Error in line 2: A591 S302 21,4
Error in line 6: bJI A591 99,9
